resources/css/layout.css
/* Login 
 --------------------------------------------------------*/

.user-icon,
.user-name {
    display: block;
    float: left;
    height: 48px;
}
.user-icon {
    background-repeat: no-repeat;
    margin: 0 10px 0 0;
    width: 48px;
}
.user-name {
    font-size: 24px;
    line-height: 48px;
}

/* Shared Properties
 --------------------------------------------------------*/

.Box,
#Info,
#Thumbnails,
#TopBar {
    background: rgba(0, 0, 0, .75);
}
.Navigation ul,
.control {
    background-color: rgba(50, 50, 50, .5);
    border-radius: 4px;
    -moz-border-radius: 4px;
    }
    .control:hover {
        background-color: rgba(50, 50, 50, .75);
    }

.holder {
    position: fixed;
    width: 100%;
}

/* Boxes
 --------------------------------------------------------*/

.Box {
    border-radius: 2px;
    -moz-border-radius: 2px;
    position: absolute;
    right: 10px;
    top: 80px;
    width: 300px;
    z-index: 40;
    }
    .Box div {
        margin: 10px;
        position: relative;
        }
        .Box .close {
            background: url(../images/icons/gui/x_14x14.png) no-repeat 50% 50%;
            height: 20px;
            position: absolute;
            right: 0;
            top: 0;
            width: 20px;
        }
        .Box li,
        .Box p,
        .Box span {
            text-shadow: 1px 1px 0 #fff;
        }
        .Box strong {
            text-shadow: none;
        }

        .meta {
            display: block;
        }

/* Image Holder
 --------------------------------------------------------*/

#Image {
    position: relative;
    }
    #Image div {
        position: absolute;
        z-index: 20;
    }

/* InfoBox
 --------------------------------------------------------*/

#Info {
    position: absolute;
    right: 20px;
    top: 80px;
}

/* Loader
 --------------------------------------------------------*/

#Loader {
    background: #fff url(../images/indicator-image.gif) no-repeat 50% 50%;
    border-radius: 10px;
    -moz-border-radius: 10px;
    box-shadow: 0 0 5px rgba(0, 0, 0, .75);
    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, .75);
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .75);
    height: 50px;
    position: absolute;
    width: 50px;
    z-index: 50;
}

/* Thumbnails
 --------------------------------------------------------*/

#Thumbnails {
    bottom: 0;
    height: 70px;
    left: 0;
    position: fixed;
    overflow: hidden;
    width: 100%;
    z-index: 40;
    }
    .play,
    .slide {
        background-position: 50% 50%;
        background-repeat: no-repeat;
        display: block;
        float: left;
        height: 50px;
        margin: 10px;
        width: 50px;
    }
    .play {
        background-image: url(../images/icons/gui/play_12x16.png);
    }
    .pause {
        background-image: url(../images/icons/gui/pause_12x16.png);
    }
    .slide {
        background-image: url(../images/icons/gui/last_16x16.png);
    }
    .thumbnail-wrapper {
        float: left;
        height: 50px; /* thumbnail height + margin */
        margin: 10px;
        overflow: hidden;
        position: relative;
    }
    .thumbnail-wrapper Thumbnails ul {
        overflow: hidden;
        }
        .thumbnail-wrapper li {
            float: left;
            margin: 0 10px 0 0;
            }
        .thumbnail-wrapper li:last-of-type {
            margin: 0;
            }
            .thumbnail-wrapper li a {
                background-position: 50% 50%;
                display: block;
                height: 50px;
                opacity: .25;
                overflow: hidden;
                webkit-transition: opacity 1s ease;
                -moz-transition: opacity 1s ease;
                -o-transition: opacity 1s ease;
                width: 50px;
            }
            .thumbnail-wrapper a:hover,
            .thumbnail-wrapper .current {
                opacity: 1;
            }

/* Topbar
 --------------------------------------------------------*/

#TopBar {
    height: 60px;
    left: 0;
    overflow: hidden;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 40;
    }
    .Title,
    .Controls,
    .Navigation {
        float: left;
        margin: 15px 0;
    }

    #TopBar div.Title,
    #TopBar div.Navigation {
        width: 40%;
    }

    #TopBar .Title {
        }
        #TopBar .Title h1 {
            text-indent: 10px;
            text-shadow: 1px 1px 0 #333;
        }
    
    #TopBar .Controls {
        width: 20%;
        }
        .Controls div {
            margin: 5px auto 0;
            width: 160px;
            }
            .Controls a {
                background-repeat: no-repeat;
                display: block;
                height: 25px;
                line-height: 28px;
                width: 60px;
            }
            .Controls .prev {
                background-image: url(../images/icons/gui/arrow_left_12x12.png);
                background-position: 10% 50%;
                float: left;
                padding: 0 10px 0 0;
                text-align: right;
            }
            .Controls .next {
                background-image: url(../images/icons/gui/arrow_right_12x12.png);
                background-position: 90% 50%;
                float: right;
                padding: 0 0 0 10px;
                text-align: left;
            }
    
    #TopBar .Navigation {
        float: right;
        }
        #TopBar .Navigation ul {
            float: right;
            margin: 0 10px 0 0;
            }
            #TopBar .Navigation li {
                float: left;
                margin: 0 0 0 10px;
            }
            #TopBar .Navigation li:last-of-type {
                margin-right: 10px;
                }
                #TopBar .Navigation a {
                    display: block;
                    height: 30px;
                    line-height: 30px;
                    letter-spacing: 1px;
                }

